--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "grunt-cli": "latest",
     "grunt-contrib-clean": "latest",
     "grunt-contrib-coffee": "latest",
-    "grunt-contrib-commands": "latest",
+    "grunt-toffee": "latest",
+    "grunt-commands": "latest",
     "grunt-execute": "latest",
     "gruntify-eslint": "latest",
     "grunt-contrib-jshint": "latest",
     "grunt-jsduck": "latest",
+    "grunt-cucumberjs": "latest",
     "grunt-jasmine-node": "latest",
+    "grunt-mocha-test": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-mkdir": "latest",
     "grunt-easy-mongo-fixture": "latest",
@@ -46,6 +49,9 @@
     "jsonlint": "latest",
     "toffee-script": "latest",
     "jasmine-node": "latest",
+    "mocha": "latest",
+    "expect": "latest",
+    "cucumber": "latest",
     "istanbul": "latest",
     "proxyquire": "latest",
     "yo": "latest",
